[project]
name = "cog_rob_cw"
version = "0.1.0"
description = "Cognitive Robotics Coursework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "torch>=2.4.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.19.0",
    "optuna>=3.6.1",
    "kaleido>=0.2.1",
    "plotly>=5.24.0",
    "opencv-python>=4.10.0",
    "kagglehub>=0.3.13",
    "kaggle>=1.8.2",
]
